rename files and refine readme

--- a/AlphabetSoupCharity_Optimisation.ipynb
+++ b/AlphabetSoupCharity_Optimisation.ipynb
@@ -1776,7 +1776,7 @@
       "source": [
         "# Export our model to HDF5 file\n",
         "# Define the file path for saving the model\n",
-        "model_path = \"AlphabetSoupCharity_Optimization.h5\"\n",
+        "model_path = \"AlphabetSoupCharity_Optimisation.h5\"\n",
         "\n",
         "# Export the model to HDF5 file\n",
         "nn.save(model_path)\n"
@@ -1785,7 +1785,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Auto Optimization"
+        "## Auto Optimisation"
       ],
       "metadata": {
         "id": "nYDt3vLK24kq"
